# OKH-krawler

./: .bumpversion.cfg  .editorconfig  .env.example  .gitignore  .pylintrc  .style.yapf  Dockerfile  README.md  REUSE.toml  poetry.lock.license  pyproject.toml  sample-config.yml
.github/workflows/: docker.yml  test.yml
krawl/: __init__.py  common.py  config.py  db.py  dict_utils.py  errors.py  exceptions.py  file_formats.py  gh.py  licenses.py  log.py  namespaces.py  platform_url.py  project.py  rdf.py  recursive_dict.py  recursive_type.py  util.py  wf.py  wfconvert.py
krawl/assets/: spdx-blocklist.json  spdx-licenses-extra.json
krawl/assets/file_extensions/: cad.csv  code.txt  image.txt  pcb.csv
krawl/cli/: __init__.py  __main__.py
krawl/cli/command/: __init__.py
krawl/cli/command/convert/: __init__.py
krawl/cli/command/convert_dir/: __init__.py
krawl/cli/command/fetch/: __init__ copy.py  __init__.py  fetcher.py  url.py
krawl/cli/command/list/: __init__.py  fetchers.py
krawl/cli/command/validate/: __init__.py  config.py  manifest.py
krawl/fetcher/: __init__.py  appropedia.py  event.py  factory.py  github.py  gitlab.py  manifests_list_flat.py  manifests_repo.py  normalizer_fetch_listener.py  old_oshwa.py  oshwa.py  result.py  thingiverse.py  util.py  wikifactory.py
krawl/gui/: main.py
krawl/krawl/: common.py  config.py  db.py  gh.py  licenses.py  namespaces.py  rdf.py  wf.py  wfconvert.py
krawl/krawl/tests/: test_gh.py
krawl/krawl/wikibase/: core.py
krawl/model/: agent.py  data_set.py  file.py  hosting_id.py  hosting_unit.py  hosting_unit_factory.py  hosting_unit_forge.py  hosting_unit_web.py  language_string.py  licenses.py  manifest.py  mass.py  outer_dimensions.py  part.py  project.py  project_id.py  project_part_reference.py  software.py  sourcing_procedure.py  user.py  util.py
krawl/normalizer/: __init__.py  factory.py  file_handler.py  github.py  gitlab.py  manifest.py  oshwa.py  thingiverse.py  trusted.py  wikifactory.py
krawl/reporter/: __init__.py  dummy.py  file.py
krawl/repository/: __init__.py  factory.py  fetch_result_repository.py  fetch_result_repository_workdir.py  fetcher_state.py  project_file.py  project_wikibase.py
krawl/request/: rate_limit.py
krawl/serializer/: __init__.py  factory.py  json.py  json_deserializer.py  json_serializer.py  rdf.py  rdf_deserializer.py  rdf_serializer.py  toml.py  toml_deserializer.py  toml_serializer.py  util.py  yaml.py  yaml_deserializer.py  yaml_serializer.py
krawl/shared/: thingiverse.py
krawl/storage/: __init__.py  fetcher_state_storage_file.py  project_storage_file.py
krawl/tests/: test_krawl.py
krawl/validator/: __init__.py  dummy.py  strict.py
krawl/wikibase/: api.py  core.py  session.py
run/: check_okh_compatibility  create_sample_data  download_latest_api_specs  scrape  stats  test
samples/: okh-sample-OHLOOM.ttl
src/ont/: okh-krawler.ttl
tests/normalizer/: github.py
