[tool.poetry]
name = "krawl"
version = "2.2.3"
description = ""
authors = [
       "Robin Vobruba <hoijui.quaero@gmail.com>",
       "Andre Lehmann <aisberg@posteo.de>"
       ]

[tool.poetry.scripts]
krawl = "krawl.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
PyGithub = "^1.55"
toml = "^0.10.2"
rdflib = "^5.0.0"
pathvalidate = "^2.3.2"
langdetect = "^1.0.8"
PyYAML = "^6.0"
requests-oauthlib = "^1.3.0"
python-strtobool = "^1.0.3"
requests = "^2.26.0"
python-dateutil = "^2.8.2"
validators = "^0.18.2"
gql = {version = "^3.0.0rc0", extras = ["requests"]}
Cerberus = "^1.3.4"
cleo = "^0.8.1"
langcodes = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
poethepoet = "^0.31.1"
yapf = "^0.43.0"
isort = "^5.13.2"
pylint = "^3.3.2"
pytest-cov = "^6.0.0"
pytest-icdiff = "^0.9"

[tool.poe.tasks]
bump = {cmd = "bump2version --allow-dirty", help = "Bump the app version"}
_clean = """
rm -rf .coverage
       .pytest_cache
       dist
       build
       ./**/__pycache__
"""
clean = {ref = "_clean", help = "Clean up temporary files"}
build = {cmd = "poetry build"}
format = {shell = "isort krawl && yapf -i -r -vv -p krawl", help = "Format the code using YAPF"}
lint = {cmd = "pylint ./krawl", help = "Use PyLint to evaluate the code quality"}
_publish = {cmd = "poetry publish"}
release = {sequence = ["format", "test", "build", "_publish"], help = "Create a release of the application and publish it on PyPi"}
test = {cmd = "pytest --cov=jintaro tests", help = "Run the test suits"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "2.2.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "{new_version}"
tag_message = "Release OKH Krawler version {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "krawl/__init__.py"
