# SPDX-FileCopyrightText: 2021 - 2022 Andre Lehmann <aisberg@posteo.de>
# SPDX-FileCopyrightText: 2021 Alec Hanefeld <alec@konek.to>
# SPDX-FileCopyrightText: 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "krawl"
version = "2.2.3"
description = ""
authors = [
       "Robin Vobruba <hoijui.quaero@gmail.com>",
       "Andre Lehmann <aisberg@posteo.de>"
       ]

[tool.poetry.scripts]
krawl = "krawl.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
PyGithub = "^2.5.0"
toml = "^0.10.2"
tomli = "^2.2.1"
types-toml = "^0.10.0"
rdflib = "^7.1.1"
pathvalidate = "^3.2.1"
langdetect = "^1.0.9"
ftfy = "^6.3.1"
PyYAML = "^6.0.2"
types-PyYAML = "^6.0.0"
requests-oauthlib = "^1.3.0"
orjson = "^3.10"
python-strtobool = "^1.0.3"
requests = "^2.32.0"
python-dateutil = "^2.9.0"
validators = "^0.34.0"
gql = {version = "^3.5.0", extras = ["requests"]}
Cerberus = "^1.3.6"
cleo = "^0.8.1"
langcodes = "^3.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
lxml = "^5.3.0"
pytest = "^8.3.4"
poethepoet = "^0.31.1"
types-requests = "^2.32.0"
yapf = "^0.43.0"
isort = "^5.13.2"
pylint = "^3.3.2"
pytest-cov = "^6.0.0"
pytest-icdiff = "^0.9"
ruff = "^0.8.4"

[tool.poe.tasks]
bump = {cmd = "bump2version --allow-dirty", help = "Bump the app version"}
_clean = """
rm -rf .coverage
       .pytest_cache
       dist
       build
       ./**/__pycache__
"""
clean = {ref = "_clean", help = "Clean up temporary files"}
build = {cmd = "poetry build"}
format = {shell = "isort krawl tests && yapf -i -r -vv -p krawl tests", help = "Format the code using YAPF"}
check_format = {shell = "isort --check-only krawl && yapf -i -r -vv -p krawl", help = "Check whether the formatting is correct. Exits with 0 if it is"}
lint = {cmd = "pylint --fail-under 5 --fail-on E krawl tests", help = "Use PyLint to evaluate the code quality"}
fast_lint = {cmd = "ruff check krawl tests", help = "Use Ruff to evaluate the code quality"}
_publish = {cmd = "poetry publish"}
release = {sequence = ["format", "test", "build", "_publish"], help = "Create a release of the application and publish it on PyPi"}
test = {cmd = "python -m unittest tests/**/*.py", help = "Run the test suits"}
mypy = {cmd = "mypy --check-untyped-defs --html-report build --txt-report build .", help = "Checks type correctness"}
types = {sequence = ["mypy"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "2.2.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "{new_version}"
tag_message = "Release OKH Krawler version {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "krawl/__init__.py"
